--- a/css/home.css
+++ b/css/home.css
@@ -9,11 +9,24 @@
 
 
 .video-container {
-
+    position: fixed;
+    z-index: -1000;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
     top: 0;
     left: 0;
-    width: 100%;
-    filter: brightness(50%);
+    filter: brightness(60%);
+    
+}
+
+#video-bg-elem{
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 100%;
+    min-width: 100%;
+    
 }
 
 .colour-overlay {
@@ -40,21 +53,8 @@ nav a:hover {
     cursor: pointer;
 }
 
-video {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    max-width: 100%;
-    height: auto;
-    filter: brightness(50%);
-    z-index: 1;
-    ::-webkit-scrollbar {
-        display: none;
-    }
-}
 
-.title{
+.title {
     font-family: 'Ramabhadra', cursive, Helvetica, sans-serif;
     color: white;
     font-size: 4em;
@@ -64,7 +64,7 @@ video {
     margin-top: 10%;
 }
 
-.titlename{
+.titlename {
     font-family: 'Allura', cursive, Helvetica, sans-serif;
     color: white;
     font-size: 3em;
@@ -74,4 +74,14 @@ video {
 
 }
 
-
+@media only screen and (max-width: 700px) {
+    
+    .title{
+        padding-top: 30%;
+        font-size: 1.7em;
+    }    
+    .titlename{
+        font-size: 1.8em;
+        padding-top: 5%;
+    }
+}
