--- a/css/about.css
+++ b/css/about.css
@@ -6,21 +6,22 @@
 }
 
 img {
-    display: flex;
-    float: right;
     padding-top: 5%;
     margin-right: 15%;
     margin-left: 5%;
+    margin-bottom: 5%;
 }
 
+
 .about-sec {
-    display: inline-block;
+    padding-top: 5%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
 }
 
 .button {
-    margin-left: 15em;
-
-
+    margin-left: 10em;
 }
 
 a {
@@ -31,18 +32,29 @@ a {
 }
 
 
+@media only screen and (max-width: 1020px) {
+    
+    .about-sec{
+        flex-direction: column-reverse;
+        
+    }
+}
+
+
 @media only screen and (max-width: 700px) {
 
     .about-sec {
         max-width: 100%;
         margin: 2em;
         padding-top: 0%;
+        
+        
     }
 
 
     .bio {
         max-width: 100%;
-        margin: 1em;
+        margin: 0;
         padding-top: 0;
 
     }
@@ -51,12 +63,15 @@ a {
         max-width: 100%;
         max-height: auto;
         margin: 0;
+        margin-bottom: 5%;
 
     }
 
     .button {
 
-        margin: 4em;
+        margin: 0;
+        margin-left: 7em;
+        margin-top: 4em;
         justify-content: center;
     }
 
