--- a/css/paradigm.css
+++ b/css/paradigm.css
@@ -1,12 +1,20 @@
-.center{
-
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 
-p{
-   
+h1 {
+    text-align: center;
 }
 
-@media only screen and (max-width: 700px) {
+.vid{
+    text-align: center;
+}
 
-    
+@media only screen and (max-width: 900px) {
+    .center {
+        width: 80%
+    }
 }
