--- a/css/main.css
+++ b/css/main.css
@@ -100,19 +100,18 @@ header::after {
   -webkit-transition: 0.5s ease;
 }
 
-li {
-     
-}
 
 /* SOCIAL MEDIA ICONS */
+
 .fa {
     padding: 20px;
-    font-size: 30px;
+    font-size: 20px;
     width: 50px;
     text-align: center;
     text-decoration: none;
     margin: 5px 2px;
     border-radius: 50%;
+    margin-left: 19%;
 }
 
 .fa:hover {
@@ -122,8 +121,18 @@ li {
 .fa-facebook {
     background: #15db8c;
     color: white;
+    
 }
 
+.fa-instagram {
+  background: #15db8c;
+  color: white;
+}
+
+.fa-linkedin {
+  background: #15db8c;
+  color: white;
+}
 
 /* BUTTON */
 .button {
@@ -217,7 +226,14 @@ footer a:hover{
     margin-left: 14em;
 }
 
-
+@media only screen and (max-width: 1400px) {
+    
+    .fa{
+        margin-top: 0;
+        margin-left: 8%;
+        margin-bottom: 8%;
+    }
+}
 
 @media only screen and (max-width: 700px) {
 
@@ -234,6 +250,10 @@ footer a:hover{
 
     }
 
+    .fa{
+        margin-left: 14%
+        
+    }
     iframe {
         max-width: 100%;
     }
@@ -242,5 +262,138 @@ footer a:hover{
 @media only screen and (max-width: 800px) {
     footer {
         font-size: .6em;
+    }
+}
+
+/* HAMBURGER MENU IF THE SCREEN TOO SMALL */
+
+@media only screen and (max-width: 510px) {
+
+    .topnavborder {
+        border: none;
+    }
+
+    #menuToggle {
+        display: block;
+        position: absolute;
+        top: 20px;
+        left: 10px;
+
+        z-index: 1;
+
+        -webkit-user-select: none;
+        user-select: none;
+    }
+
+    #menuToggle input {
+        display: block;
+        width: 40px;
+        height: 32px;
+        position: absolute;
+        top: -7px;
+        left: -5px;
+
+        cursor: pointer;
+
+        opacity: 0;
+        /* hide this */
+        z-index: 2;
+        /* and place it over the hamburger */
+
+        -webkit-touch-callout: none;
+    }
+
+    /*
+ * Just a quick hamburger
+ */
+    #menuToggle span {
+        display: block;
+        width: 33px;
+        height: 4px;
+        margin-bottom: 5px;
+        margin-left: 15px;
+        margin-top: 5px;
+        position: relative;
+
+        background: #15db8c;
+        border-radius: 3px;
+
+        z-index: 1;
+
+        transform-origin: 4px 0px;
+
+        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
+            background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
+            opacity 0.55s ease;
+    }
+
+    #menuToggle span:first-child {
+        transform-origin: 0% 0%;
+    }
+
+    #menuToggle span:nth-last-child(2) {
+        transform-origin: 0% 100%;
+    }
+
+    /* 
+ * Transform all the slices of hamburger
+ * into a crossmark.
+ */
+    #menuToggle input:checked ~ span {
+        opacity: 1;
+        transform: rotate(45deg) translate(-2px, -1px);
+        background: #15db8c;
+    }
+
+    /*
+ * But let's hide the middle one.
+ */
+    #menuToggle input:checked ~ span:nth-last-child(3) {
+        opacity: 0;
+        transform: rotate(45deg) scale(0.2, 0.2);
+    }
+
+    /*
+ * Ohyeah and the last one should go the other direction
+ */
+    #menuToggle input:checked ~ span:nth-last-child(2) {
+        transform: rotate(-45deg) translate(0, -1px);
+    }
+
+    /*
+ * Make this absolute positioned
+ * at the top left of the screen
+ */
+    #menu {
+        position: absolute;
+        width: 250px;
+        margin: -100px 0 0 -50px;
+        padding: 50px;
+        padding-top: 125px;
+        border: solid 2px;
+        border-color: #15db8c;
+
+
+        background: white;
+        list-style-type: none;
+        -webkit-font-smoothing: antialiased;
+        /* to stop flickering of text in safari */
+
+        transform-origin: 0% 0%;
+        transform: translate(-100%, 0);
+
+        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+    }
+
+    #menu li {
+        padding: 10px 0;
+        font-size: 22px;
+    }
+
+    /*
+ * And let's slide it in from the left
+ */
+    #menuToggle input:checked ~ ul {
+        transform: none;
     }
 }
