--- a/css/about.css
+++ b/css/about.css
@@ -70,7 +70,7 @@ a {
 
     img {
         max-width: 100%;
-        max-height: auto;
+        max-height: 100%;
         margin: 0;
         margin-bottom: 5%;
 
