--- a/css/home.css
+++ b/css/home.css
@@ -36,8 +36,8 @@
     left: 0;
     background-color: black;
     width: 100%;
-    height: 100%vh;
-    opacity: 8.5;
+    height: 100vh;
+    opacity: 1;
 }
 
 nav a {
