--- a/css/main.css
+++ b/css/main.css
@@ -94,7 +94,7 @@ header::after {
   width: 0;
   height: 5px;
   background: rgba(100,100,200,0);
-  //left: -50px;
+  left: -50px;
   top: 20px;
   position: absolute;
   -webkit-transition: 0.5s ease;
