--- a/css/work.css
+++ b/css/work.css
@@ -43,7 +43,7 @@ a {
 
     img {
         max-width: 100%;
-        max-height: auto;
+        max-height: 100%;
         margin: 0;
         margin-bottom: 3em;
 
